# rusty_curl

./: Cargo.toml  README.md
scripts/: find_unused_pub.sh
src/: cli.rs  http.rs  lib.rs  main.rs  output.rs
tests/: integration.rs
