[package]
name = "rusty_curl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "rustls-tls"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
httpmock = "0.7"
