[package]
name = "rusty_curl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "rustls-tls"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
retry-policies = "0.1"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.23.0"
